# catclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-TW.md  install.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: approval.rs  cli_ui.rs  cmd_hook.rs  config.rs  dist.rs  error.rs  gateway.rs  logging.rs  main.rs  mcp_discovery.rs  mcp_server.rs  pidfile.rs  router.rs  scheduler.rs  state.rs  subscription.rs  ws_client.rs  ws_protocol.rs  ws_server.rs
src/agent/: codex_args.rs  loader.rs  mod.rs  models.rs
src/channel/: backend.rs  discord.rs  line.rs  mod.rs  reaction.rs  slack.rs  telegram.rs
src/contacts/: mod.rs  pipeline.rs  tools.rs
src/memory/: analyze.rs  context.rs  db.rs  embed.rs  kg.rs  migrate.rs  mod.rs  oneshot.rs  search.rs  tools.rs
src/session/: claude.rs  codex.rs  manager.rs  mod.rs  queue.rs  runtime.rs  transcript.rs
src/social/: forward.rs  instagram.rs  mod.rs  poller.rs  threads.rs  webhook.rs
src/tui/: agents.rs  bindings.rs  chat.rs  config_panel.rs  contacts.rs  dashboard.rs  editor.rs  issues.rs  logs.rs  mod.rs  sessions.rs  skills.rs  social_drafts.rs  social_inbox.rs  splash.rs  tasks.rs  theme.rs
tasks/: codex-image-gen-plan.md  codex-runtime-plan.md  line-adapter-plan.md  todo.md
