[package]
name = "catclaw"
version = "0.20.0"
edition = "2021"
description = "Personal AI assistant gateway powered by Claude Code CLI"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Concurrent data structures
dashmap = "6"

# UUID
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# Regex (for log grep)
regex = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
poise = "0.6"

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm"] }

# Async trait
async-trait = "0.1"

# Futures
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Interactive prompts
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Cron expression parsing
croner = "2"

# Base64 decoding (for GitHub API content)
base64 = "0.22"

# TTY detection (for colored output)
atty = "0.2"

# Unicode display width
unicode-width = "0.2"

# Telegram
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }

# HTTP client (for Telegram, MCP, etc.)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server (Gateway: WS + MCP on single port)
axum = { version = "0.8", features = ["ws"] }

# SHA256 checksum verification (for self-update)
sha2 = "0.10"

# HMAC-SHA256 for Meta webhook signature verification
hmac = "0.12"

# Hex encoding for HMAC output
hex = "0.4"

# Unix UID for launchd domain target
[target.'cfg(unix)'.dependencies]
libc = "0.2"
